--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
