--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-swipeable": "^7.0.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
+    "swiper": "^10.3.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
